# Vinyl-System

./: .gitignore  render.yaml
backend/: Cargo.toml  Dockerfile  update_pass.py  vinyl.db
backend/migrations/: 20260224001415_init_schema.sql  20260224003346_users_schema.sql  20260224020000_add_user_profile_fields.sql  20260224021000_add_slip_url_to_orders.sql  20260304220000_showcase_schema.sql  20260305000000_fix_user_profile_schema.sql
backend/src/: main.rs
backend/src/handlers/: analytics.rs  auth.rs  calculator.rs  inventory.rs  middleware.rs  mod.rs  orders.rs  profile.rs  showcase.rs
data/: IMPLEMENT.md  SRS.md  SRS_Checklist_Thai.txt  app.js  extract_pdf.py  index.html  style.css  ระบบจัดการร้านบริการพิมพ์ไวนิล ( กลุ่ม ไผ่อวบหรอ ) (3).txt  ร้านบริการพิมพ์ไวนิล ( กลุ่มไผ่อวบหรอ ).txt
frontend/: fix_frontend_syntax.py  fix_frontend_syntax_simple.py  package-lock.json  package.json  temp_replace.py  update_api_urls.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/admin/analytics/: page.tsx
frontend/src/app/admin/dashboard/: page.tsx
frontend/src/app/admin/inventory/: page.tsx
frontend/src/app/admin/showcase/: page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/customer/: layout.tsx
frontend/src/app/customer/dashboard/: page.tsx
frontend/src/app/showcase/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/components/ui/: dropdown-menu.tsx
frontend/src/lib/: api.ts
(+2 files in other folders)
