[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["fs", "full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.0" # Downgrading to 9.3.0 which uses ring by default and doesn't have this crypto provider issue
bcrypt = "0.15.1"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
dotenvy = "0.15.7"
